kube/chromadb/chromadb-service.yml
apiVersion: v1
kind: Service
metadata:
  annotations:
    field.cattle.io/targetWorkloadIds: '["llama/chromadb-insurance"]'
    management.cattle.io/ui-managed: 'true'
  creationTimestamp: '2024-02-08T14:54:19Z'
  managedFields:
    - apiVersion: v1
      fieldsType: FieldsV1
      fieldsV1:
        f:metadata:
          f:annotations:
            .: {}
            f:field.cattle.io/targetWorkloadIds: {}
            f:management.cattle.io/ui-managed: {}
          f:ownerReferences:
            .: {}
            k:{"uid":"361de0f0-b80b-43ac-89a8-3967de478fda"}: {}
        f:spec:
          f:internalTrafficPolicy: {}
          f:ports:
            .: {}
            k:{"port":8000,"protocol":"TCP"}:
              .: {}
              f:name: {}
              f:port: {}
              f:protocol: {}
              f:targetPort: {}
          f:selector: {}
          f:sessionAffinity: {}
          f:type: {}
      manager: agent
      operation: Update
      time: '2024-02-08T14:54:19Z'
  name: chromadb-insurance
  namespace: llama
  ownerReferences:
    - apiVersion: apps/v1
      controller: true
      kind: Deployment
      name: chromadb-insurance
      uid: 361de0f0-b80b-43ac-89a8-3967de478fda
  resourceVersion: '265611356'
  uid: f6725b59-34bf-4f21-be95-c5a0e9a7206c
spec:
  clusterIP: 10.43.6.208
  clusterIPs:
    - 10.43.6.208
  internalTrafficPolicy: Cluster
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
  ports:
    - name: entry
      port: 8000
      protocol: TCP
      targetPort: 8000
  selector:
    workload.user.cattle.io/workloadselector: apps.deployment-llama-chromadb-insurance
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
